feat: Added TypeScript validators for checking key and ExcelData object structure
Added two new TypeScript validators:
1. `hasColsKeys` checks that an object has keys in the format "col_" followed by a number.
2. `isExcelData` checks that an object is of type `ExcelData` and that the values associated with each key are arrays of `ExcelDataColValue` objects.

These validators use the `@tsoa/runtime` package to raise validation errors in case of non-conformity.
