# src/interfaces/excel/request-generation.interface.ts
@@ -1,0 +1,6 @@
+import {ExcelData} from "./excel-data.interface";
+
+export interface RequestGeneration {
+    data: ExcelData;
+    fileName?: string
+}
